--- a/index.html
+++ b/index.html
@@ -27,31 +27,6 @@
     />
 
     <style>
-      .header {
-        height: 100px;
-        z-index: 1;
-      }
-
-      .hero__heading {
-        font-size: 2.5rem;
-        font-weight: 700;
-      }
-
-      .hero__description {
-        font-size: 1.8rem;
-      }
-
-      .logo {
-        height: 40px;
-        width: 40px;
-      }
-
-      .hero__mouse {
-        bottom: 50px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 60px;
-      }
       /*-----------stacks section---------*/
 
       .stack {
@@ -102,26 +77,6 @@
       }
 
       @media only screen and (max-width: 600px) {
-        .hero__heading {
-          font-size: 1rem;
-        }
-
-        .hero__description {
-          font-size: 1rem;
-        }
-
-        .hero__mouse {
-          height: 30px;
-        }
-
-        .logo {
-          height: 1.5rem;
-          width: 1.5rem;
-        }
-
-        .nav-links__item {
-          font-size: 14px;
-        }
         .projects {
           font-size: 1rem;
         }
@@ -142,103 +97,10 @@
   </head>
 
   <body>
-    <header class="header position-fixed w-100 bg-base">
-      <nav
-        class="
-          container
-          h-100
-          d-flex
-          align-items-center
-          justify-content-between
-        "
-      >
-        <a href="#" class="text-white">
-          <!-- svg logo -->
-          <svg viewBox="0 0 506.32 608.64" class="logo">
-            <defs>
-              <style>
-                .cls-1 {
-                  fill: #fff;
-                }
-              </style>
-            </defs>
-            <g id="Layer_2" data-name="Layer 2">
-              <g id="Layer_1-2" data-name="Layer 1">
-                <path
-                  class="cls-1"
-                  d="M380.69,481.36h0A42.14,42.14,0,0,0,355.15,490,168.9,168.9,0,0,1,89.5,397h.09A173.38,173.38,0,0,1,90,312.58h-.13a167.77,167.77,0,0,1,43.95-76.44,169.62,169.62,0,0,1,37.71-28.47A41.8,41.8,0,0,0,192.86,171h0c0-32-34.42-52.55-62.43-37C37.79,185.47-19.19,293.34,6,411.22c20.12,94.35,93.3,169,187.34,190.56,80.28,18.39,156.18-1.4,213.14-44.8C438.47,532.58,421,481.36,380.69,481.36Z"
-                />
-                <path
-                  class="cls-1"
-                  d="M376.2,134.19c-28.13-15.66-62.74,4.63-62.74,36.83h0a41.83,41.83,0,0,0,21.32,36.65,169.68,169.68,0,0,1,37.72,28.47,167.77,167.77,0,0,1,43.95,76.44H295.35V42.19A42.19,42.19,0,0,0,253.16,0h0A42.19,42.19,0,0,0,211,42.19V312.58H109.34a154.53,154.53,0,0,0-6,43A151,151,0,0,0,109,397H464.87a41.34,41.34,0,0,0,41.45-41.07v-.42A253.09,253.09,0,0,0,376.2,134.19Z"
-                />
-                <path
-                  class="cls-1"
-                  d="M253.16,507.37a42.19,42.19,0,0,0,42.19-42.19V415.25H211v49.93a42.19,42.19,0,0,0,42.19,42.19Z"
-                />
-              </g>
-            </g>
-          </svg>
-        </a>
-
-        <!-- nav links -->
-        <div class="nav-links text-white d-flex align-items-center">
-          <a
-            href="#"
-            class="nav-links__item text-decoration-none text-white me-md-5 me-4"
-            >About Me</a
-          >
-
-          <a
-            href="#"
-            class="nav-links__item text-decoration-none text-white me-md-5 me-4"
-            >Project</a
-          >
-
-          <a href="#" class="nav-links__items text-decoration-none text-white"
-            >Blog</a
-          >
-        </div>
-      </nav>
-    </header>
+    <my-header></my-header>
 
     <!-- Hero Section -->
-    <section class="bg-base text-white position-relative h-screen">
-      <div
-        class="
-          container
-          d-flex
-          flex-column
-          align-items-center
-          justify-content-center
-          h-100
-        "
-      >
-        <h1 class="hero__heading text-center mb-md-4 mb-3">
-          Senior Frontend Engineer.
-        </h1>
-
-        <p class="hero__description text-center text-base-lighten-1 col-md-9">
-          I bring ideas to life through creativity and emerging technologies.
-        </p>
-
-        <!-- mouse svg -->
-        <svg
-          class="hero__mouse position-absolute"
-          viewBox="0 0 63 63"
-          fill="none"
-        >
-          <path
-            d="M31.5005 0C19.269 0 9.31836 10.1071 9.31836 22.5298V40.4709C9.31836 52.8935 19.269 63 31.5005 63C43.7312 63 53.6827 52.9242 53.6827 40.5398V22.5298C53.6827 10.1071 43.7312 0 31.5005 0ZM49.5104 40.5398C49.5104 50.6239 41.4316 58.8278 31.5005 58.8278C21.57 58.8278 13.4906 50.5927 13.4906 40.4702V22.5298C13.4906 12.4073 21.57 4.17215 31.5005 4.17215C41.4317 4.17215 49.5104 12.4073 49.5104 22.5298V40.5398Z"
-            fill="white"
-          />
-          <path
-            d="M31.5002 17.245C30.348 17.245 29.4141 18.179 29.4141 19.3312V26.6325C29.4141 27.7847 30.348 28.7187 31.5002 28.7187C32.6524 28.7187 33.5863 27.7847 33.5863 26.6325V19.3312C33.5863 18.179 32.6524 17.245 31.5002 17.245Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-    </section>
+    <my-hero></my-hero>
 
     <!-- stack section -->
     <section class="stack bg-base text-white">
@@ -478,18 +340,11 @@
           Projects
         </h2>
 
-        <div
-          class="
-            projects__item
-            row
-            align-items-md-center
-            justify-content-md-between
-            w-75
-            mx-auto
-          "
-        >
-          <div class="col-md-5">
-            <img class="img-rec" src="assets/images/Rectangle 6.svg" />
+        <div class="projects__item row align-items-md-center w-75 mx-auto">
+          <div class="col-md-6">
+            <div
+              style="width: 90%; background-color: #ccc; height: 500px"
+            ></div>
           </div>
 
           <div class="col-md-6 text-white">
@@ -514,7 +369,6 @@
             projects__item
             row
             align-items-md-center
-            justify-content-md-between
             w-75
             mx-auto
           "
@@ -540,25 +394,21 @@
             >
           </div>
 
-          <div class="col-md-5 text-white">
-            <img class="img-rec" src="assets/images/Rectangle 6.svg" />
+          <div class="col-md-6 text-white d-flex justify-content-end">
+            <div
+              style="background-color: #ccc; width: 90%; height: 500px"
+            ></div>
           </div>
         </div>
 
-        <div
-          class="
-            row
-            align-items-md-center
-            justify-content-md-between
-            w-75
-            mx-auto
-          "
-        >
+        <div class="row align-items-md-center w-75 mx-auto">
           <div class="col-md-6">
-            <img class="img-rec" src="assets/images/Rectangle 6.svg" />
+            <div
+              style="background-color: #ccc; width: 90%; height: 500px"
+            ></div>
           </div>
 
-          <div class="col-md-5 text-white">
+          <div class="col-md-6 text-white">
             <h3 class="projects-item__title font-bold">Cloudenly</h3>
 
             <p class="projects-item__description text-base-lighten-1">
@@ -591,7 +441,7 @@
       </div>
     </section>
 
-    <section class="bg-base" style="padding-top: 150px" ;>
+    <section class="bg-base" style="padding: 150px 0" ;>
       <div class="container">
         <div class="end-title text-white d-flex justify-content-center">
           <h2 class="end-title font-bold">Let’s Get In Touch</h2>
@@ -605,13 +455,17 @@
               border-bottom: 2px;
               padding-bottom: 80px;
             "
-            href="#"
+            href="mailto:ikenna.ezeani@yahoo.com"
             >ikenna.ezeani@yahoo.com</a
           >
         </div>
 
         <div class="d-flex justify-content-center">
-          <a href="#" class="me-3">
+          <a
+            href="https://linkedin.com/in/iykeevans"
+            target="_blank"
+            class="me-3"
+          >
             <svg
               width="24"
               height="24"
@@ -626,22 +480,7 @@
             </svg>
           </a>
 
-          <a href="#" class="me-3">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M7.8 2H16.2C19.4 2 22 4.6 22 7.8V16.2C22 17.7383 21.3889 19.2135 20.3012 20.3012C19.2135 21.3889 17.7383 22 16.2 22H7.8C4.6 22 2 19.4 2 16.2V7.8C2 6.26174 2.61107 4.78649 3.69878 3.69878C4.78649 2.61107 6.26174 2 7.8 2ZM7.6 4C6.64522 4 5.72955 4.37928 5.05442 5.05442C4.37928 5.72955 4 6.64522 4 7.6V16.4C4 18.39 5.61 20 7.6 20H16.4C17.3548 20 18.2705 19.6207 18.9456 18.9456C19.6207 18.2705 20 17.3548 20 16.4V7.6C20 5.61 18.39 4 16.4 4H7.6ZM17.25 5.5C17.5815 5.5 17.8995 5.6317 18.1339 5.86612C18.3683 6.10054 18.5 6.41848 18.5 6.75C18.5 7.08152 18.3683 7.39946 18.1339 7.63388C17.8995 7.8683 17.5815 8 17.25 8C16.9185 8 16.6005 7.8683 16.3661 7.63388C16.1317 7.39946 16 7.08152 16 6.75C16 6.41848 16.1317 6.10054 16.3661 5.86612C16.6005 5.6317 16.9185 5.5 17.25 5.5ZM12 7C13.3261 7 14.5979 7.52678 15.5355 8.46447C16.4732 9.40215 17 10.6739 17 12C17 13.3261 16.4732 14.5979 15.5355 15.5355C14.5979 16.4732 13.3261 17 12 17C10.6739 17 9.40215 16.4732 8.46447 15.5355C7.52678 14.5979 7 13.3261 7 12C7 10.6739 7.52678 9.40215 8.46447 8.46447C9.40215 7.52678 10.6739 7 12 7ZM12 9C11.2044 9 10.4413 9.31607 9.87868 9.87868C9.31607 10.4413 9 11.2044 9 12C9 12.7956 9.31607 13.5587 9.87868 14.1213C10.4413 14.6839 11.2044 15 12 15C12.7956 15 13.5587 14.6839 14.1213 14.1213C14.6839 13.5587 15 12.7956 15 12C15 11.2044 14.6839 10.4413 14.1213 9.87868C13.5587 9.31607 12.7956 9 12 9Z"
-                fill="white"
-              />
-            </svg>
-          </a>
-
-          <a href="#">
+          <a href="https://github.com/iykeevans" target="_blank">
             <svg
               width="24"
               height="24"
@@ -667,5 +506,9 @@
 
     <!-- scripts happen here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module">
+      import "./components/my-header.js";
+      import "./components/my-hero/index.js";
+    </script>
   </body>
 </html>
